add emotiv event logic

--- a/EmotivBridge/EmotivBridge.csproj
+++ b/EmotivBridge/EmotivBridge.csproj
@@ -164,6 +164,10 @@
     <Error Condition="!Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props'))" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>copy "C:\Program Files (x86)\Emotiv premium Insight libraries v3.1.17\EDK\x86\edk.dll" "$(TargetDir)edk.dll"
+copy "C:\Program Files (x86)\Emotiv premium Insight libraries v3.1.17\EDK\x86\edk_utils.dll" "$(TargetDir)edk_utils.dll"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
