--- a/EmotivController/EmotivController.csproj
+++ b/EmotivController/EmotivController.csproj
@@ -60,6 +60,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>copy "C:\Program Files (x86)\Emotiv premium Insight libraries v3.1.17\EDK\x86\edk.dll" "$(TargetDir)edk.dll"
+copy "C:\Program Files (x86)\Emotiv premium Insight libraries v3.1.17\EDK\x86\edk_utils.dll" "$(TargetDir)edk_utils.dll"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
