adding smile and frown detection to change sphero colors

--- a/EmoBot/EmoBot.csproj
+++ b/EmoBot/EmoBot.csproj
@@ -103,6 +103,7 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpheroController.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -143,6 +144,9 @@
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.SignalR.Client">
       <HintPath>..\..\..\..\..\Desktop\EmotivBridgeClassic\EmotivBridgeClassic\bin\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="RobotKit">
+      <HintPath>..\..\..\..\..\Downloads\Sphero-Win-SDK-master\Sphero-Win-SDK-master\library\0.9.0-preview\debug\RobotKit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
